Georgia: Adding Guide to user editable fields

--- a/tpl/profile.frame.html
+++ b/tpl/profile.frame.html
@@ -48,6 +48,13 @@
 						</div>
 					</div>
 					<div class="form-group">
+						<label for="user_guide" class="col-sm-3 control-label">ELA&nbsp;Guide</label>
+						<div class="col-sm-9">
+							<input type="text" class="form-control" id="user_guide" placeholder="Guide" name="guide"
+								value="<?php echo $_SESSION['user']['guide']; ?>">
+						</div>
+					</div>
+					<div class="form-group">
 						<label for="user_title" class="col-sm-3 control-label">Title</label>
 						<div class="col-sm-9">
 							<input type="text" class="form-control" id="user_title" placeholder="Title" name="title"
