--- a/tpl/search.frame.html
+++ b/tpl/search.frame.html
@@ -77,8 +77,8 @@
 							</strong><br/>
 							<small data-ng-bind="user.title">Intern</small><br/>
 							<span class="text-muted">
-								<span data-ng-bind="user.company">Temporary INC.</span><br/>
-								<span data-ng-bind="user.city">Two Dot</span>,&nbsp;<span data-ng-bind="user.state">MT</span>
+								<small data-ng-bind="user.company">Temporary INC.</small><br/>
+								<small data-ng-bind="user.city">Two Dot</small>,&nbsp;<small data-ng-bind="user.state">MT</small>
 							</span>
 						</td>
 						<td data-ng-bind="user.bio" class="hidden-xs">was an amazing ...</td>
